# web-play

./: .gitignore  README.md  package.yaml  stack.yaml  web-play.cabal
src/Pipes/: Monoid.hs
src/Web/: Play.hs  Socket.hs
src/Web/Play/: Css.hs  Html.hs  Js.hs  MVC.hs  Page.hs  Server.hs  Types.hs
test/: TestPlay.hs  test.hs
test/canned/: play.html
