name: web-play
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Tony Day <tonyday567@gmail.com>
bug-reports: https://github.com/tonyday567/web-play/issues
synopsis: Haskell project web-play repo 
description: <https://github.com/tonyday567/web-play>
extra-source-files:
    README.md

library
  exposed-modules:     Web.Play
                     , Web.Play.Page
                     , Web.Play.Js
                     , Web.Play.Css
                     , Web.Play.Html
                     , Web.Play.MVC
                     , Web.Play.Server
                     , Web.Play.Types
                     , Web.Socket


                     