name: web-play
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Tony Day <tonyday567@gmail.com>
bug-reports: https://github.com/tonyday567/web-play/issues
synopsis: Haskell project web-play repo 
description: <https://github.com/tonyday567/web-play>
extra-source-files:
    README.md

library
  exposed-modules:     Web.Play
                     , Web.Play.Page
                     , Web.Play.Js
                     , Web.Play.Css
                     , Web.Play.Html
                     , Web.Play.MVC
                     , Web.Play.Server
                     , Web.Play.Types
                     , Web.Socket

  other-modules:       Data.Aeson.ByteString   
  build-depends:       base == 4.*
                     , aeson
                     , async
                     , attoparsec
                     , bytestring
                     , data-default
                     , lens
                     , lucid-page
                     , managed
                     , mtl
                     , mvc
                     , mvc-extended
                     , network              
                     , pipes
                     , pipes-extended
                     , text
                     , websockets

  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded
  hs-source-dirs:      src, test
  build-depends:       base == 4.*
                     , web-play
                     , tasty
                     , tasty-hspec
                     , aeson
                     , async
                     , attoparsec
                     , bytestring
                     , data-default
                     , lens
                     , lucid-page
                     , managed
                     , mtl
                     , mvc
                     , mvc-extended
                     , network              
                     , pipes
                     , pipes-extended
                     , text
                     , websockets